[project]
name = "yolo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "argparse>=1.4.0",
    "flax>=0.10.1",
    "jax[cuda12]>=0.4.35",
    "optax>=0.2.3",
    "tqdm>=4.67.0",
    "safetensors>=0.4.5",
    "flaxmodels>=0.1.3",
    "polars>=1.12.0",
    "opencv-python>=4.10.0.84",
    "pillow>=11.0.0",
    "matplotlib>=3.9.2",
]
